...

    const val SEARCH_CHUNK_ICON = "searchChunkIcon"
    const val CHUNK_LIST = "chunkList"
    const val STORMTROOPER_DRAW = "stormtrooperDraw"

    const val ADD_OBJECT_MAIN_SCREEN = "addObjectMainScreen"
    const val ADD_OBJECT_CATEGORY_DROPDOWN = "addObjectCategoryDropdown"
    const val ADD_OBJECT_PLANET_TAG = "addObjectPlanet"
    const val ADD_OBJECT_MOVIE_TAG = "addObjectMovie"
    const val ADD_OBJECT_SPECIE_TAG = "addObjectSpecie"
    const val ADD_OBJECT_STARSHIP_TAG = "addObjectStarship"
    const val ADD_OBJECT_VEHICLE_TAG = "addObjectVehicle"
    const val ADD_OBJECT_PERSON_TAG = "addObjectPerson"
    const val ADD_IMAGE_OBJECT_TAG = "addImageToObject"
...
