<resources>
    <string name="app_name">Star Wars Wiki</string>
    <string name="app_name_top_bar">StarWarsWiki</string>
    <string name="on_boarding_image">On boarding Image</string>
    <string name="close_text">Close</string>
    <string name="title_text">Title:</string>
    <string name="author_text">Author name:</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="label_notes">Your notes</string>
    <string name="subject">Subject</string>
    <string name="subject_placeholder">Fill the subject of your feedback</string>
    <string name="description">Description</string>
    <string name="description_placeholder">Provide your description :)</string>
    <string name="movies">MOVIES</string>
    <string name="people">PEOPLE</string>
    <string name="starships">STARSHIPS</string>
    <string name="vehicles">VEHICLES</string>
    <string name="species">SPECIES</string>
    <string name="planets">PLANETS</string>
    <string name="search_icon">search icon</string>
    <string name="close_icon">close icon</string>
    <string name="home_icon">home icon</string>
    <string name="options">options</string>
    <string name="bottom_tab_description">bottom tab description</string>
    <string name="network_error_icon">network error icon</string>
    <string name="placeholder_search">Search images…</string>
    <string name="flickr_image">image from flickr</string>


    <string name="homeworld_box_name">Home World</string>
    <string name="species_box_name">Specie</string>
    <string name="birth_box_name">Birth Year</string>
    <string name="height_box_name">Height</string>
    <string name="mass_box_name">Mass</string>
    <string name="gender_box_name">Gender</string>
    <string name="hair_box_name">Hair</string>
    <string name="skin_box_name">Skin</string>
    <string name="episode_id_box_name">Episode No</string>
    <string name="opening_crawl_box_name">Opening Crawl</string>
    <string name="director_box_name">Director</string>
    <string name="producers_box_name">Producers</string>
    <string name="release_date_box_name">Release Date</string>
    <string name="diameter_box_name">Diameter</string>
    <string name="rotation_period_box_name">Rotation Period</string>
    <string name="orbital_period_box_name">Orbital Period</string>
    <string name="gravity_box_name">Gravity</string>
    <string name="population_box_name">Population</string>
    <string name="climates_box_name">Climates</string>
    <string name="terrains_box_name">Terrains</string>
    <string name="surface_water_box_name">Surface Water</string>
    <string name="classification_box_name">Classification</string>
    <string name="designation_box_name">Designation</string>
    <string name="avr_height_box_name">Average Height</string>
    <string name="avr_lifespan_box_name">Average Lifespan</string>
    <string name="eye_colors_box_name">Eye Colors</string>
    <string name="hair_colors_box_name">Hair Colors</string>
    <string name="skin_colors_box_name">Skin Colors</string>
    <string name="language_box_name">Language</string>
    <string name="model_box_name">Model</string>
    <string name="starship_class_box_name">Starship class</string>
    <string name="vehicle_class_box_name">Vehicle class</string>
    <string name="manufacturers_box_name">Manufacturers</string>
    <string name="cost_box_name">Cost</string>
    <string name="length_box_name">Length</string>
    <string name="crew_box_name">Crew</string>
    <string name="passengers_box_name">Passengers</string>
    <string name="v_max_box_name">V Max</string>
    <string name="hyperdrive_box_name">Hyperdrive Class</string>
    <string name="mglt_box_name">Megalight</string>
    <string name="cargo_box_name">Cargo</string>
    <string name="consumables_box_name">Consumables supply</string>

    <string name="wiki_bottom_bar">WIKI</string>
    <string name="images_bottom_bar">IMAGES</string>
    <string name="more_bottom_bar">MORE</string>


</resources>